[gd_scene load_steps=8 format=3 uid="uid://c7a1jc6oqbnj8km7c"]

[ext_resource type="Script" path="res://scripts/battle/battle_scene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/battle/battle_manager.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cjqv8h3x5y9wk" path="res://scenes/ui/champion_display.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dxevqgqy5gm2r" path="res://scenes/ui/enemy_display.tscn" id="4"]
[ext_resource type="Script" path="res://scripts/ui/hand_ui.gd" id="5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dark"]
bg_color = Color(0.1, 0.1, 0.1, 1.0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.4, 0.6, 1.0)

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1.0)

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("2")

[node name="ChampionsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 640.0
separation = 20

[node name="ChampionDisplay1" parent="ChampionsContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="ChampionDisplay2" parent="ChampionsContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="ChampionDisplay3" parent="ChampionsContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="EnemiesContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 80.0
offset_right = 1260.0
offset_bottom = 640.0
separation = 15
alignment = 1

[node name="EnemyDisplay1" parent="EnemiesContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(120, 200)
layout_mode = 2

[node name="EnemyDisplay2" parent="EnemiesContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(120, 200)
layout_mode = 2

[node name="EnemyDisplay3" parent="EnemiesContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(120, 200)
layout_mode = 2

[node name="Hand" type="Control" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 520.0
offset_right = 1040.0
offset_bottom = 700.0
script = ExtResource("5")

[node name="PhaseLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 15.0
offset_right = 740.0
offset_bottom = 55.0
text = "Phase: Planning"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="ActionsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 15.0
offset_right = 1000.0
offset_bottom = 40.0
text = "Actions: 3"
theme_override_font_sizes/font_size = 14

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 45.0
offset_right = 1000.0
offset_bottom = 70.0
text = "Gold: 0"
theme_override_font_sizes/font_size = 14

[node name="DeckCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 150.0
offset_bottom = 40.0
text = "Deck: 20"
theme_override_font_sizes/font_size = 12

[node name="DiscardCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 45.0
offset_right = 150.0
offset_bottom = 70.0
text = "Discard: 0"
theme_override_font_sizes/font_size = 12

[node name="EndTurnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1090.0
offset_top = 660.0
offset_right = 1250.0
offset_bottom = 705.0
text = "End Turn"
theme_override_styles/normal = SubResource("StyleBoxFlat_button")

[node name="VictoryDefeatScreen" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_left = 0.2
anchors_top = 0.2
anchors_right = 0.8
anchors_bottom = 0.8
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="VictoryDefeatLabel" type="Label" parent="VictoryDefeatScreen"]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.2
anchors_right = 1.0
anchors_bottom = 0.35
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="RewardsLabel" type="Label" parent="VictoryDefeatScreen"]
layout_mode = 1
anchors_left = 0.1
anchors_top = 0.35
anchors_right = 0.9
anchors_bottom = 0.6
text = "Rewards"
horizontal_alignment = 1
vertical_alignment = 0
autowrap_mode = 2
theme_override_font_sizes/font_size = 16

[node name="ContinueButton" type="Button" parent="VictoryDefeatScreen"]
layout_mode = 1
anchors_left = 0.3
anchors_top = 0.7
anchors_right = 0.7
anchors_bottom = 0.85
text = "Continue"
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
